using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants 
{
    public const string ANIM_WALK = "Walk";
    public const string ANIM_DEAD = "Dead";
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_RELOAD = "Reload";
    public const string ANIM_PAUSE_UI_START = "Start";
    public const string ANIM_PAUSE_UI_END = "End";
    public const string ANIM_MAINMENU_UI_START = "Start";
    public const string ANIM_MAINMENU_UI_END = "End";
    public const string ANIM_MAINMENU_UI_IDLE = "Idle";
}

public enum ItemType
{
    Item_1 = 0, 
    Item_2 = 1, 
    Item_3 = 2, 
    Item_4 = 3, 
    Item_5 = 4,
}
